--- a/main_other_data.ipynb
+++ b/main_other_data.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +73,7 @@
     "    val_path = 'dataset/processed_multitude/train_valid_data/es_val.json'\n",
     "    test_path = 'dataset/processed_multitude/test_data/es_test.json'\n",
     "    labels_folder = 'dataset/processed_multitude/labels/'\n",
+    "    test_dir = 'dataset/processed_multitude/test_data'\n",
     "    dataset_names = ['en']\n",
     "    # dataset_names = ['ar', 'ca', 'cs', 'de', 'en', 'es', 'nl', 'pt', 'ru', 'uk', 'zh']\n",
     "\n",
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +332,7 @@
     "            for model_name in ['gpt-3.5-turbo', 'gpt-4']:\n",
     "                test_embeddings, test_labels = get_embeddings_and_labels(\n",
     "                    f'{dataset_name}_{model_name}', \n",
-    "                    test_path, device, layer_num)\n",
+    "                    f'{test_dir}/{dataset_name}_{model_name}.json', device, layer_num)\n",
     "                testset_embeddings.append(test_embeddings)\n",
     "                testset_labels.append(test_labels)\n",
     "                data_and_model_names.append(dataset_name + \"-\" + model_name)\n",
@@ -419,40 +420,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "trying to get es_train\n",
-      "trying to get es_val\n",
-      "the device being used is cuda\n",
-      "there are 150 train data and 20 validation data.\n",
-      "Epoch [1/10], Loss: 1.1309, Validation Accuracy: 0.9000\n",
-      "Epoch [2/10], Loss: 1.6254, Validation Accuracy: 0.9000\n",
-      "Epoch [3/10], Loss: 0.7243, Validation Accuracy: 0.9000\n",
-      "Epoch [4/10], Loss: 1.0129, Validation Accuracy: 0.9000\n",
-      "Epoch [5/10], Loss: 1.1408, Validation Accuracy: 0.9000\n",
-      "Epoch [6/10], Loss: 0.9493, Validation Accuracy: 0.9000\n",
-      "Epoch [7/10], Loss: 0.9984, Validation Accuracy: 0.9000\n",
-      "Epoch [8/10], Loss: 1.0622, Validation Accuracy: 0.9000\n",
-      "Epoch [9/10], Loss: 1.0269, Validation Accuracy: 0.9000\n",
-      "Epoch [10/10], Loss: 1.0264, Validation Accuracy: 0.9000\n",
-      "trying to get en_gpt-3.5-turbo\n",
-      "trying to get en_gpt-4\n"
+     "ename": "NameError",
+     "evalue": "name 'train_and_test_one_layer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrain_and_test_one_layer\u001b[49m(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, device, dataset_names)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_and_test_one_layer' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'en-gpt-3.5-turbo': 0.71, 'en-gpt-4': 0.71}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
